--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "codemirror": "^5.62.0",
+    "firebase": "^8.8.1",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-codemirror2": "^7.2.1",
